--- a/danel_information_center/app/profile.html
+++ b/danel_information_center/app/profile.html
@@ -25,7 +25,7 @@
         <input readonly required type="text" class="form-control" id="mail"
                #_mail="ngModel" [(ngModel)]="loginProperties.mail" name="mail">
     </div>
-    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">update password</button>
+    <button (click)="onUpdatePasswordModelOpen()" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">update password</button>
 </form>
 
 <div id="myModal" class="modal fade" role="dialog">
@@ -35,13 +35,13 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Modal Header</h4>
+                <h4 class="modal-title">update password</h4>
             </div>
             <div class="modal-body">
-                <form (ngSubmit)="onChangePassword()" #profileForm="ngForm" class="form">
+                <form *ngIf="!submittesSuccessfuly" (ngSubmit)="onChangePassword()" #profileForm="ngForm" class="form">
                     <div class="form-group">
                         <label for="current-password">current password</label>
-                        <input type="text" class="form-control" id="current-password"
+                        <input type="password" class="form-control" id="current-password"
                                required
                                [(ngModel)]="currentPassword" name="currentPassword"
                                #_currentPassword="ngModel">
@@ -53,7 +53,7 @@
 
                     <div class="form-group">
                         <label for="new-password">new password</label>
-                        <input type="text" class="form-control" id="new-password"
+                        <input type="password" class="form-control" id="new-password"
                                required
                                [(ngModel)]="newPassword" name="newPassword"
                                #_newPassword="ngModel">
@@ -65,14 +65,14 @@
 
                     <div class="form-group">
                         <label for="new-password-validation">new password validate</label>
-                        <input type="text" class="form-control" id="new-password-validation"
+                        <input type="password" class="form-control" id="new-password-validation"
                                required [(ngModel)]="newPasswordValidation" #_newPasswordValidation="ngModel"
                                name="newPasswordValidation">
-                        <div [hidden]="_newPasswordValidation.valid || _newPasswordValidation.pristine"
+                        <div #newPasswordValidationDiv [hidden]="_newPasswordValidation.valid || _newPasswordValidation.pristine"
                              class="alert alert-danger">
                             new  passwords validation is required
                         </div>
-                        <div [hidden]="newPasswordValidation == newPassword ||!(_newPasswordValidation.valid || _newPasswordValidation.pristine)"
+                        <div [hidden]="newPasswordValidation == newPassword || !newPasswordValidationDiv.hidden"
                              class="alert alert-danger">
                             passwords not match
                         </div>
@@ -82,12 +82,18 @@
                         <div (setVerified)="setVerified($event)" googlerecaptcha [siteKey]="'6LeObAwUAAAAANlcxV6KExfLKNunrLNppCBiWbx4'" [theme]="'red'"></div>
                     </div>
                     <button type="submit" class="btn btn-default" [disabled]="!profileForm.form.valid || newPasswordValidation != newPassword  || !validCaptcha">Submit</button>
-
-
                 </form>
-            </div>
 
+                <div *ngIf="submittesSuccessfuly" class="h3 text-center main-panel">
+                    <p>password successfuly changed</p>
+                    <p><a (click)="visiblePassword=!visiblePassword;toggleState()">{{visiblePassword?newPassword:'click to see new password'}}</a></p>
+                </div>
+
+
+            </div>
         </div>
 
     </div>
+
 </div>
+
